# qtiohelper

./: .gitignore  .qmake.conf  CMakeLists.txt  README.md  qtiohelper.pro  sync.profile
.github/workflows/: buildAndTest.yml  triggerMetaUpdates.yml
src/: CMakeLists.txt  src.cmake  src.pro
src/actuasense/: CMakeLists.txt  QtActuaSense  actuasense-lib.pri  actuasense.cpp  actuasense.h  actuasense.pro  actuasenseConfig.cmake.in  actuasense_global.h  actuasense_p.h
src/bit-input-poller/: bit-input-poller-lib.pri  bit-input-poller.cpp  bit-input-poller.h  bit-input-poller.pro  bit-input-poller_p.h
src/bitinputpoller/: CMakeLists.txt  QBitInputPoller  bit-input-poller.cpp  bit-input-poller.h  bit-input-poller_p.h  bitinputpoller.pro  bitinputpollerConfig.cmake.in  bitinputpoller_global.h  bitinputpollerlib.pri
src/relay-mapper/: relay-base.cpp  relay-base.h  relay-base_p.h  relay-mapper-lib.pri  relay-mapper.cpp  relay-mapper.h  relay-mapper.pro  relay-mapper_p.h  relay-sequencer.cpp  relay-sequencer.h  relay-sequencer_p.h  relay-serializer.cpp  relay-serializer.h  relay-serializer_p.h  relay_global.h
src/relaymapper/: CMakeLists.txt  QRelayMapper  QRelaySequencer  QRelaySerializer  relay-base.cpp  relay-base.h  relay-base_p.h  relay-mapper.cpp  relay-mapper.h  relay-sequencer.cpp  relay-sequencer.h  relay-serializer.cpp  relay-serializer.h  relaymapper.pro  relaymapperConfig.cmake.in  relaymapper_global.h  relaymapperlib.pri
src/remote-common/: remote-common.cpp  remote-common.h  remote-common.pro
src/remotecommon/: CMakeLists.txt  QtIoRemoteCommon  remote-common.cpp  remote-common.h  remotecommon.pro  remotecommonConfig.cmake.in  remotecommonlib.pri
src/serialportasyncblock/: CMakeLists.txt  QSerialPortAsyncBlock  serialportasyncblock-lib.pri  serialportasyncblock.cpp  serialportasyncblock.h  serialportasyncblock.pro  serialportasyncblockConfig.cmake.in  serialportasyncblock_global.h  serialportasyncblock_p.h
src/spidevice/: CMakeLists.txt  QSPIDevice  qspidevice.cpp  qspidevice.h  qspidevice_global.h  qspidevice_p.h  qspiremote.cpp  qspiremoteserver.h  spidevice-lib.pri  spidevice.pro  spideviceConfig.cmake.in
src/testapps/: CMakeLists.txt  testapps.cmake  testapps.pro
src/testapps/relay-mapper-test/: CMakeLists.txt  main.cpp  relay-mapper-test.pro
src/tools/: CMakeLists.txt  tools.cmake  tools.pro
src/tools/spi-remote-server/: CMakeLists.txt  main.cpp  spi-remote-server.pro
tests/auto/cmake/: CMakeLists.txt  cmake.pro
